syntax = "proto3";

import "google/type/date.proto";

option java_package = "server"; 
option java_outer_classname = "DispatchOrderProto";

package dispatch_order;

service DispatchOrderGrpcService {
    rpc GetDispatchOrderGrpc(GetByDispatchOrderRequest) returns (DispatchOrderGrpc);
}

message GetByDispatchOrderRequest {
    int32 dispatchOrder = 1;
}

message DispatchOrderGrpc {
    int32 dispatchOrder = 1;
    int32 idPurchaseOrder = 2;
    google.type.Date estimatedDate = 3;
}
